# PathTracer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  setup.bat
assets/kernels/: pathtracer_kernel.cl
assets/saves/: default.scn  dinner.scn  monkey.scn  monkey2.scn  newsave.scn  noobject.scn  withfullmodels.scn
assets/shaders/: AABCT_fragment_shader.frag  AABC_fragment_shader.frag  AABC_vertex_shader.vert  AABT_fragment_shader.frag  AABT_vertex_shader.vert  pos_norm_tex.frag  pos_norm_tex.vert  testFragment.frag  testVertex.vert
dependencies/GLAD/src/: glad.c
dependencies/Neon2DRenderer/include/: Renderer2D.h
dependencies/Neon2DRenderer/src/: Renderer2D.cpp
dependencies/NeonGui/include/: Button.h  ButtonBase.h  Canvas.h  Container.h  ContainerBase.h  Dropdown.h  FloatInput.h  Gui.h  IntInput.h  Label.h  LayoutPanel.h  RadioButton.h  Slider.h  TextInput.h
dependencies/NeonGui/src/: Button.cpp  ButtonBase.cpp  Canvas.cpp  Container.cpp  ContainerBase.cpp  Dropdown.cpp  FloatInput.cpp  Gui.cpp  IntInput.cpp  Label.cpp  LayoutPanel.cpp  RadioButton.cpp  Slider.cpp  TextInput.cpp
dependencies/NeonOpenGL/include/: Debug.h  FrameBuffer.h  IndexBuffer.h  Mesh.h  MyOpenGL.h  RenderBuffer.h  Shader.h  ShadowMap.h  Texture.h  Vertex.h  VertexArray.h  VertexBuffer.h  VertexLayout.h
dependencies/NeonOpenGL/src/: FrameBuffer.cpp  IndexBuffer.cpp  Mesh.cpp  RenderBuffer.cpp  Shader.cpp  ShadowMap.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
include/: App.h  ImageLabelButton.h  Scene.h
src/: App.cpp  ImageLabelButton.cpp  Scene.cpp  main.cpp
(+5 files in other folders)
